Destroy the QUnifiedTimer when the Q*Application gets destroyed

Cleanup the thread local instance of the QUnifiedTimer when
the QCoreApplication::aboutToQuit signal gets emitted.
This should make sure the QUnifiedTimer for the main thread
is destroyed and doesn't try to run any AnimationJobs which are
already deleted.

Fixes: QTBUG-136629
Pick-to: 6.9 6.8
Change-Id: Icd23c362ce2812beb83eddb45aa693e24292e13f
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit ae84310e27cad07ba9075f849c1da0537391ddd8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>