src/corelib/animation/qabstractanimation.cpp
@@ -117,6 +117,8 @@
 #include <QtCore/qcoreevent.h>
 #include <QtCore/qpointer.h>
 #include <QtCore/qscopedvaluerollback.h>
+#include <QtCore/qcoreapplication.h>
+#include <QtCore/qthread.h>
 
 #define DEFAULT_TIMER_INTERVAL 16
 #define PAUSE_TIMER_COARSE_THRESHOLD 2000
@@ -199,6 +201,9 @@ QUnifiedTimer *QUnifiedTimer::instance(bool create)
     if (create && !unifiedTimer) {
         inst = new QUnifiedTimer;
         unifiedTimer.reset(inst);
+        if (QThread::isMainThread())
+            connect(qApp, &QCoreApplication::aboutToQuit, inst,
+                    []() { unifiedTimer.reset(nullptr); });
     } else {
         inst = unifiedTimer.get();
     }
